<resources>
    <string name="app_name">Event Planner</string>
    <string name="new_event_setting">Add New Event</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_date">Select End Date</string>
    <string name="select_end_time">Select End Time</string>
    <string name="select_venue">Select Venue</string>
    <string name="location">Location</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="select_attendees">Select Attendees</string>
    <string name="event_title">Event Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
