<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/enter_event_title"
        android:id="@+id/dialog_view_title_text"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:singleLine="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_start_date"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_start_date"
        android:clickable="false"
        android:editable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_start_time"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_start_time"
        android:clickable="false"
        android:editable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_end_date"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_end_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_end_time"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_end_time"
        android:clickable="false"
        android:editable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_venue"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_venue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_location"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/location" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_note"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/enter_notes"
        android:singleLine="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/dialog_view_attendee"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:hint="@string/select_attendees" />
</LinearLayout>