<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:id="@+id/list_row_layout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/event_title"
        android:id="@+id/event_title_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/start_date"
        android:id="@+id/start_date_text"
        android:layout_below="@+id/event_title_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/end_date"
        android:id="@+id/end_date_text"
        android:layout_below="@+id/event_title_text"
        android:layout_toEndOf="@+id/event_title_text"
        android:paddingLeft="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/start_time"
        android:id="@+id/event_time_text"
        android:layout_alignTop="@+id/end_date_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp" />

</RelativeLayout>